--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -24,6 +24,13 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@iconscout/react-unicons": "^1.1.6",
+    "apexcharts": "^3.37.1",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^10.0.1",
+    "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1"
   }
 }
