--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -22,6 +22,14 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "react-router-dom": "^6.8.1"
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
+    "react-tabs": "^6.0.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1"
   }
 }
