--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "axios": "^1.3.4",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "react-helmet-async": "^1.3.0",
