--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-tabs": "^6.0.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
