--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -32,6 +32,7 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "use-react-router-breadcrumbs": "^4.0.1"
   }
 }
