--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@iconscout/react-unicons": "^2.0.0",
     "axios": "^1.3.4",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
+    "framer-motion": "^10.0.1",
+    "react-apexcharts": "^1.4.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.2",
     "react-tabs": "^6.0.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
