--- a/SASSY/Front_End/package.json
+++ b/SASSY/Front_End/package.json
@@ -25,8 +25,9 @@
     "axios": "^1.3.4",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
+    "framer-motion": "^10.0.1",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-tabs": "^6.0.0",
     "react-toastify": "^9.1.1",
